<p style="margin: 0">- Improvement to avoid self notifications when removing/clearing items</p>
<p style="margin: 0"><b>Version 01.00.03</b></p>
<p style="margin: 0">- Fixed buggy merge on 01.00.02 version, missing part of the code improvements</p>
<p style="margin: 0"><b>Version 01.00.04</b></p>
<p style="margin: 0">- Changed DotNetNuke references to use nuget.org packages</p>
<p style="margin: 0">- Fixed a bug causing out of sync caches with multiple servers on Clear cache calls</p>
<p style="margin: 0"><b>Version 02.00.00</b></p>
<p style="margin: 0">- Added new Redis output caching provider</p>
<p style="margin: 0">- DNN Platform 8.0 and .NET Framework 4.5.1 or higher is now required</p>
<p style="margin: 0">- Fixed a remove cache issue when having process IDs with different lengths</p>
<p style="margin: 0">- Changed manifest to avoid web.config reconfigurations on upgrades</p>
<p style="margin: 0"><b>Version 02.01.00</b></p>
<p style="margin: 0">- Changed the redis clear by using LUA script to loop server side to clear cache</p>
<p style="margin: 0">- Fixed a problem parsing redis message when keyPrefix includes :</p>
<p style="margin: 0">- Fixed typo in Redis event name that prevents clearing cache in multiserver environment.</p>
<p style="margin: 0">- Updated StackExchange.Redis library to v1.1.603</p>
<p style="margin: 0">- Fixed an issue causing OuputCachingProvider config attributes being ignored</p>
<p style="margin: 0"><b>Version 03.00.00</b></p>
<p style="margin: 0">- Changed the minimum required DNN version to 9.0.1</p>
<p style="margin: 0">- Refreshed nuget packages including the latest version of StackExchange.Redis 1.2.6</p>
<p style="margin: 0">- Added configuration UI in the Persona Bar</p>
<p style="margin: 0">- The Redis client automatically reconnects after a Redis connection failure</p>
<p style="margin: 0"><b>Version 03.00.01</b></p>
<p style="margin: 0">- Fixed an issue when parsing the Redis connection string</p>
