@@ -31,4 +31,5 @@ Redis cache. Note that all the objects must be serializable.  If you try to inse
 <p style="margin: 0">- The Redis client automatically reconnects after a Redis connection failure</p>
 <p style="margin: 0"><b>Version 03.00.01</b></p>
 <p style="margin: 0">- Fixed an issue when parsing the Redis connection string</p>
+<p style="margin: 0">- Fixed an issue causing not adding the default keyPrefix when empty</p>
 
